--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,6 @@
 html {
     height: 100%;
 }
-
 body {
     font-family: source-sans-pro, serif;
     font-size: 16px;
@@ -12,7 +11,6 @@ body {
     overflow: hidden;
     position: relative;
 }
-
 .header {
     background: #666;
     -webkit-background-size: 1px 44px;
@@ -28,7 +26,6 @@ body {
     -webkit-touch-callout: none;
     border-bottom: solid 1px #eee;
 }
-
 .header h1 {
     padding: 0;
     text-align: center;
@@ -41,7 +38,6 @@ body {
     -moz-box-flex: 1;
     box-flex: 1;
 }
-
 .header-button {
     position: absolute;
     top: 6;
@@ -49,38 +45,33 @@ body {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     line-height: 1em;
 }
-
 .header-button-left {
     left: 4;
 }
-
 .search-bar {
     background: #ccc;
     height: 32px;
-    padding-left:6px;
+    padding-left: 6px;
     padding-right: 6px;
     padding-top: 6px;
     margin-bottom: 6px;
     border-bottom: solid 1px #666;
 }
-
 input[type="search"] {
-    width:100%;
-	border: none;
-	border-radius: 4px;
-	padding: 4px 0px 2px 2px;
-	margin-top: 0px;
-	font-size: 16px;
-	box-shadow: inset 0 2px 2px rgba(0,0,0,.5), 0 1px #fff;
-	background: #eee;
-    -webkit-appearance:none;
+    width: 100%;
+    border: none;
+    border-radius: 4px;
+    padding: 4px 0px 2px 2px;
+    margin-top: 0px;
+    font-size: 16px;
+    box-shadow: inset 0 2px 2px rgba(0, 0, 0, .5), 0 1px #fff;
+    background: #eee;
+    -webkit-appearance: none;
 }
-
 input[type="search"]:focus {
-	outline: none;
-	box-shadow: inset 0 4px 8px rgba(0,0,0,.5), 0 1px #fff;
+    outline: none;
+    box-shadow: inset 0 4px 8px rgba(0, 0, 0, .5), 0 1px #fff;
 }
-
 ul {
     margin: 0;
     padding: 0;
@@ -88,13 +79,11 @@ ul {
     background-color: #fafafa;
     border-bottom: 1px solid #e0e0e0;
 }
-
 li {
     display: block;
     border-top: 1px solid #c0c0c0;
     padding: 10px;
 }
-
 ul {
     margin: 0;
     padding: 0;
@@ -102,13 +91,11 @@ ul {
     background-color: #fff;
     border-bottom: 1px solid #e0e0e0;
 }
-
 li {
     display: block;
     border-top: 1px solid #e0e0e0;
     padding: 10px;
 }
-
 li {
     padding: 0;
     display: -webkit-box;
@@ -116,7 +103,6 @@ li {
     display: box;
     width: 100%;
 }
-
 li>a {
     color: #000;
     display: block;
@@ -137,54 +123,60 @@ li>a {
     -o-background-size: 10px 100%;
     background-size: 10px 100%;
 }
-
+li>a.tappable-active {
+    color: #fff;
+    background-color: #7D42F5;
+}
 li>a * {
     pointer-events: none;
 }
-
 .button {
-	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
-	box-shadow:inset 0px 1px 0px 0px #ffffff;
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf) );
-	background:-moz-linear-gradient( center top, #ededed 5%, #dfdfdf 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf');
-	background-color:#ededed;
-	-moz-border-radius:2px;
-	-webkit-border-radius:2px;
-	border-radius:2px;
-	border:1px solid #dcdcdc;
-	display:inline-block;
-	color:#666666;
-	font-size:14px;
-	text-decoration:none;
-	text-shadow:1px 1px 0px #ffffff;
+    -moz-box-shadow: inset 0px 1px 0px 0px #ffffff;
+    -webkit-box-shadow: inset 0px 1px 0px 0px #ffffff;
+    box-shadow: inset 0px 1px 0px 0px #ffffff;
+    background: -webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf));
+    background: -moz-linear-gradient( center top, #ededed 5%, #dfdfdf 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf');
+    background-color: #ededed;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    border: 1px solid #dcdcdc;
+    display: inline-block;
+    color: #666666;
+    font-size: 14px;
+    text-decoration: none;
+    text-shadow: 1px 1px 0px #ffffff;
 }
-
 .button:hover {
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed) );
-	background:-moz-linear-gradient( center top, #dfdfdf 5%, #ededed 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed');
-	background-color:#dfdfdf;
-
+    background: -webkit-gradient( linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed));
+    background: -moz-linear-gradient( center top, #dfdfdf 5%, #ededed 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed');
+    background-color: #dfdfdf;
 }
-
 h1 {
     font-size: 18px;
     padding: 20 0 0 0;
     margin: 0px;
 }
-
 h2 {
     font-size: 16px;
     font-weight: normal;
     padding: 0px;
     margin: 0px;
 }
-
 .employee-image {
-    float:left;
-    margin:10px;
-    width:100px;
-    height:100px;
+    float: left;
+    margin: 10px;
+    width: 100px;
+    height: 100px;
+}
+.scroll {
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+    position: absolute;
+    top: 84px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
 }
